--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -2,9 +2,11 @@ asgiref==3.4.1
 cycler==0.11.0
 Django==3.2.9
 django-crispy-forms==1.13.0
+et-xmlfile==1.1.0
 kiwisolver==1.3.2
 matplotlib==3.4.3
 numpy==1.21.4
+openpyxl==3.0.9
 pandas==1.3.4
 Pillow==8.4.0
 pyparsing==3.0.6
